--- a/.github/workflows/release-web-console.yaml
+++ b/.github/workflows/release-web-console.yaml
@@ -1,19 +1,22 @@
 name: Release Web Console
 
-on: [push]
+on:
+  release:
+    types: [published]
 
 jobs:
   build:
+    name: Build Docker image with released git tag
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set Short Commit Sha
-      id: vars
-      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-    - uses: whoan/docker-build-with-cache-action@v5
-      with:
-        context: ./web_console
-        image_name: fedlearner/fedlearner-web-console
-        image_tag: ${{ steps.vars.outputs.sha_short }}
-        username: fedlearner
-        password: "${{ secrets.DOCKER_REGISTRY }}"
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+      - name: Build Docker image
+        uses: whoan/docker-build-with-cache-action@v5
+        with:
+          context: ./web_console
+          username: fedlearner
+          password: "${{ secrets.DOCKER_REGISTRY }}"
+          image_name: fedlearner/fedlearner-web-console
+          image_tag: latest
+          push_git_tag: true
