--- a/.github/workflows/release-web-console.yaml
+++ b/.github/workflows/release-web-console.yaml
@@ -15,8 +15,8 @@ jobs:
         uses: whoan/docker-build-with-cache-action@v5
         with:
           context: ./web_console
-          username: fedlearner
+          username: marswong
           password: "${{ secrets.DOCKER_REGISTRY }}"
-          image_name: fedlearner/fedlearner-web-console-test
+          image_name: marswong/fedlearner-web-console-test
           image_tag: latest
           push_git_tag: true
