--- a/web_console/package.json
+++ b/web_console/package.json
@@ -86,6 +86,7 @@
     "@grpc/grpc-js": "1.1.7",
     "@grpc/proto-loader": "0.5.5",
     "@koa/router": "8.0.8",
+    "@octokit/rest": "18.0.6",
     "@zeit-ui/react": "1.8.1",
     "@zeit-ui/react-icons": "1.3.1",
     "dayjs": "1.9.3",
